--- a/oneq1.html
+++ b/oneq1.html
@@ -4,18 +4,21 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Home Page</title>
+  <title> x1 Question 1</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <div id="gameArea">
-  <h3> Test your Multiplication skills, with a multiplication Quiz</h3>
-  <h5>   </h5>
-  <a href="oneq1.html"> <button> x1 </button></a>
+ 
+  <h1> x1 Question 1 </h1>
+<h3> What is the Answer to 1 x 1</h3>
+  <label> Answer:</label><input id="input">
+  <br></bt><button onclick="oneq1()"> Submit</button>
+  <div id="appear"> </div>
   <body>
 
     <script src="script.js"></script>
   </body>
-  
+
 </div>
 
 
