Adding more questions for x1

--- a/oneq1.html
+++ b/oneq1.html
@@ -11,7 +11,7 @@
  
   <h1> x1 Question 1 </h1>
 <h3> What is the Answer to 1 x 1</h3>
-  <label> Answer:</label><input id="input">
+  <label> Answer </label><input id="input">
   <br></bt><button onclick="oneq1()"> Submit</button>
   <div id="appear"> </div>
   <body>
