--- a/oneq4.html
+++ b/oneq4.html
@@ -2,17 +2,17 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8">4
   <meta name="viewport" content="width=device-width">
-  <title> x1 Question 2</title>
+  <title> x1 Question </title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <div id="gameArea">
 
-  <h1> x1 Question 2 </h1>
-<h3> What is the Answer to 1 x 2</h3>
+  <h1> x1 Question 4 </h1>
+<h3> What is the Answer to 1 x 4</h3>
   <label> Answer </label><input id="input">
-  <br></bt><button onclick="oneq2()"> Submit</button>
+  <br></bt><button onclick="oneq4()"> Submit</button>
   <div id="appear"> </div>
   <body>
 
