Adding Question 1 to 8 for two while also making changes to previous questions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <div id="gameArea">
   <h3> Test your Multiplication skills, with a multiplication Quiz</h3>
   <h5>   </h5>
-  <a href="oneq1.html"> <button> x1 </button></a>
+  <div> 
+    <a href="oneq1.html"> <button> x1 </button></a> <a href="twoq1.html"> <button> x2 </button></a>
+  </div>
+ 
   <body>
 
     <script src="script.js"></script>
