--- a/oneCongratulations.html
+++ b/oneCongratulations.html
@@ -15,11 +15,11 @@
 
 <div id="gameArea"> 
   <h3> Congratulations  </h3>
-  <h5> You can try again or check out the other sections</h5>
+  <h5> You can try again or check out the other problems</h5>
 
-<a href="oneq1.html"> <button> Try again </button></a>
+<a href="oneq1.html"> <button> Try Again </button></a>
 
-  <a href="index.html"> <button> Other sections</button></a>
+  <a href="index.html"> <button> Other Problems</button></a>
 </div>
 </body>
 
