--- a/oneq20.html
+++ b/oneq20.html
@@ -9,10 +9,11 @@
 </head>
 <div id="gameArea">
 
-  <h1> x1 Question 19 </h1>
+  <h1> x1 Question 20 </h1>
 <h3> What is the Answer to 1 x 20</h3>
   <label> Answer </label><input id="input">
-  <br></bt><button onclick="oneq20()"> Submit</button>
+  <br><button onclick="oneq20()"> Submit</button>
+   <a href="index.html"> <button> Back To Home</button></a>
   <div id="appear"> </div>
   <body>
 
