--- a/oneq18.html
+++ b/oneq18.html
@@ -12,7 +12,8 @@
   <h1> x1 Question 18 </h1>
 <h3> What is the Answer to 1 x 18</h3>
   <label> Answer </label><input id="input">
-  <br></bt><button onclick="oneq18()"> Submit</button>
+  <br><button onclick="oneq18()"> Submit</button>
+   <a href="index.html"> <button> Back To Home</button></a>
   <div id="appear"> </div>
   <body>
 
