--- a/twoq1.html
+++ b/twoq1.html
@@ -4,20 +4,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title> x1 Question </title>
+  <title> x2 Question 1</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <div id="gameArea">
 
-  <h1> x1 Question 4 </h1>
-<h3> What is the Answer to 1 x 4</h3>
+  <h1> x2 Question 1 </h1>
+<h3> What is the Answer to 2 x 1</h3>
   <label> Answer </label><input id="input">
-  <br><button onclick="oneq4()"> Submit</button>
-   <a href="index.html"> <button> Back To Home</button></a>
+  <br><button onclick="twoq1()"> Submit</button>
+  <a href="index.html"> <button> Back To Home</button></a>
   <div id="appear"> </div>
   <body>
 
-    <script src="script.js"></script>
+    <script src="twoScript.js"></script>
   </body>
 
 </div>
