Finished Questions for two and started Questions for three

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <h5>   </h5>
   <div> 
     <a href="oneq1.html"> <button> x1 </button></a> <a href="twoq1.html"> <button> x2 </button></a>
+    <a href="threeq1.html"> <button> x3 </button></a>
   </div>
  
   <body>
