--- a/threeq3.html
+++ b/threeq3.html
@@ -4,20 +4,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title> x2 Question 18</title>
+  <title> x3 Question 3</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <div id="gameArea">
 
-  <h1> x2 Question 18 </h1>
-<h3> What is the Answer to 2 x 18</h3>
+  <h1> x3 Question 3 </h1>
+<h3> What is the Answer to 3 x 3</h3>
   <label> Answer </label><input id="input">
-  <br><button onclick="twoq18()"> Submit</button>
+  <br><button onclick="threeq3()"> Submit</button>
   <a href="index.html"> <button> Back To Home</button></a>
   <div id="appear"> </div>
   <body>
 
-    <script src="twoScript.js"></script>
+    <script src="threeScript.js"></script>
   </body>
 
 </div>
