--- a/fiveq1.html
+++ b/fiveq1.html
@@ -4,20 +4,20 @@
 <head>
   <meta charset="utf-8"
   <meta name="viewport" content="width=device-width">
-  <title> x4 Question 15</title>
+  <title> x5 Question 1</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <div id="gameArea">
 
-  <h1> x4 Question 15 </h1>
-<h3> What is the Answer to 4 x 15</h3>
+  <h1> x5 Question 1 </h1>
+<h3> What is the Answer to 5 x 1</h3>
   <label> Answer </label><input id="input">
-  <br><button onclick="fourq15()"> Submit</button>
+  <br><button onclick="fiveq1()"> Submit</button>
   <a href="index.html"> <button> Back To Home</button></a>
   <div id="appear"> </div>
   <body>
 
-    <script src="fourScript.js"></script>
+    <script src="fiveScript.js"></script>
   </body>
 
 </div>
