Finalizing five and starting on six

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   </div>
  <div> 
    <a href="fiveq1.html"> <button> x5 </button></a>
-   <a href=""> <button> x6 </button></a>
+   <a href="sixq1.html"> <button> x6 </button></a>
+   <a href="sevenq1.html"> <button> x7 </button></a>
  </div>
   
   <body>
