--- a/sixq2.html
+++ b/sixq2.html
@@ -4,20 +4,20 @@
 <head>
   <meta charset="utf-8"
   <meta name="viewport" content="width=device-width">
-  <title> x5 Question 24</title>
+  <title> x6 Question 2</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <div id="gameArea">
 
-  <h1> x5 Question 24 </h1>
-<h3> What is the Answer to 5 x 24</h3>
+  <h1> x6 Question 2 </h1>
+<h3> What is the Answer to 6 x 2</h3>
   <label> Answer </label><input id="input">
-  <br><button onclick="fiveq24()"> Submit</button>
+  <br><button onclick="sixq2()"> Submit</button>
   <a href="index.html"> <button> Back To Home</button></a>
   <div id="appear"> </div>
   <body>
 
-    <script src="fiveScript.js"></script>
+    <script src="sixScript.js"></script>
   </body>
 
 </div>
